# umm

./: .gitignore  Cargo.toml  Cross.Toml  Cross.toml  FEEDBACK  README.MD  README.md  about.toml  build.fish  history.txt  license.html  rustfmt.toml
.cargo/: config.toml
.github/workflows/: compute_hash.yml  hash.yml  rust-build.yml  rust-cross-build.yml  rust.yml
docs/: .future-incompat-report.json  .rustc_info.json  .rustdoc_fingerprint.json  index.html  search-index.js  settings.html  source-files.js
docs/ahash/: struct.AHashMap.html  struct.AHashSet.html  struct.AHasher.html  type.HashMap.html
docs/aho_corasick/: struct.AhoCorasickBuilder.html  struct.Match.html
docs/ansi_term/: all.html  enum.Color.html  fn.ANSIStrings.html  fn.sub_string.html  fn.unstyle.html  fn.unstyled_len.html  struct.ANSIGenericString.html  struct.ANSIGenericStrings.html  struct.Style.html  struct.Suffix.html
docs/anyhow/: all.html  fn.Ok.html  index.html  macro.bail.html  type.Result.html
docs/arrayvec/: struct.ArrayString.html  struct.ArrayVec.html  struct.IntoIter.html
docs/atty/: enum.Stream.html
docs/base64/: enum.CharacterSet.html  struct.Config.html
docs/block/: index.html  struct.ConcreteBlock.html
docs/bpaf/: fn.cargo_helper.html  fn.command.html  fn.short.html  index.html  sidebar-items.js  struct.Args.html  struct.Named.html  struct.Positional.html  trait.Parser.html
docs/bytes/: struct.Bytes.html
docs/chrono/: constant.MAX_DATETIME.html  constant.MIN_DATETIME.html  enum.Weekday.html  index.html  struct.Months.html  struct.ParseMonthError.html  trait.SubsecRound.html  trait.Timelike.html
docs/clipboard/: all.html  type.ClipboardContext.html
docs/colored/: all.html  enum.Styles.html  struct.ColoredString.html
docs/console/: all.html  enum.Attribute.html  enum.TermFamily.html  fn.measure_text_width.html  fn.pad_str.html  fn.pad_str_with.html  fn.set_colors_enabled_stderr.html  fn.truncate_str.html  fn.user_attended.html  struct.Emoji.html  struct.StyledObject.html
docs/crossterm/: macro.execute.html  trait.ExecutableCommand.html
docs/doc/: crates.js  help.html  index.html  search-index.js  settings.html  source-files.js
docs/encoding_rs/: struct.Encoder.html
docs/errno/: fn.set_errno.html  struct.Errno.html
docs/fd_lock/: struct.RwLockWriteGuard.html
docs/form_urlencoded/: struct.Parse.html  struct.ParseIntoOwned.html
docs/futures_executor/: struct.EnterError.html  struct.LocalSpawner.html
docs/glob/: struct.Paths.html  struct.Pattern.html
docs/h2/: struct.Ping.html  struct.StreamId.html
docs/heck/: struct.AsKebabCase.html  struct.AsLowerCamelCase.html
docs/http/: struct.Extensions.html
docs/http_body/: struct.SizeHint.html
docs/httparse/: enum.Error.html  enum.Status.html  struct.Header.html
docs/hyper/: index.html  struct.StatusCode.html  struct.Version.html
docs/hyper_tls/: struct.HttpsConnecting.html  struct.TlsStream.html
docs/iana_time_zone/: enum.GetTimezoneError.html
docs/idna/: struct.Config.html  struct.Errors.html
docs/indicatif/: all.html  enum.MultiProgressAlignment.html  enum.ProgressFinish.html  struct.BinaryBytes.html  struct.DecimalBytes.html  struct.FormattedDuration.html  struct.HumanDuration.html  struct.HumanFloatCount.html  struct.ProgressState.html
docs/io_lifetimes/: struct.OwnedFd.html  trait.AsFd.html  trait.AsFilelike.html  trait.FromFd.html  trait.FromSocketlike.html  trait.IntoFilelike.html  type.BorrowedFilelike.html  type.BorrowedSocketlike.html  type.OwnedSocketlike.html
docs/ipnet/: enum.IpNet.html  struct.AddrParseError.html  struct.Ipv4Subnets.html  struct.Ipv6Subnets.html  struct.PrefixLenError.html
docs/itertools/: enum.FoldWhile.html  enum.MinMaxResult.html
docs/itoa/: struct.Buffer.html
docs/libc/: constant.ABDAY_2.html  constant.ABDAY_4.html  constant.ABDAY_7.html  constant.ACCOUNTING.html  constant.AF_APPLETALK.html  constant.AF_CCITT.html  constant.AF_CNT.html  constant.AF_DATAKIT.html  constant.AF_ECMA.html  constant.AF_IMPLINK.html  constant.AF_INET.html  constant.AF_IPX.html  constant.AF_ISDN.html  constant.AF_ISO.html  constant.AF_LAT.html  constant.AF_LOCAL.html  constant.AF_NATM.html  constant.AF_NDRV.html  constant.AF_NETBIOS.html  constant.AF_OSI.html  constant.AF_PPP.html  constant.AF_PUP.html  constant.AF_ROUTE.html  constant.AF_SIP.html  constant.AF_SYSTEM.html  constant.AF_UNIX.html  constant.AF_UNSPEC.html  constant.AIO_ALLDONE.html  constant.AIO_CANCELED.html  constant.AIO_LISTIO_MAX.html  constant.AIO_NOTCANCELED.html  constant.AI_ADDRCONFIG.html  constant.AI_ALL.html  constant.AI_MASK.html  constant.AI_NUMERICHOST.html  constant.AI_NUMERICSERV.html  constant.AI_UNUSABLE.html  constant.AI_V4MAPPED_CFG.html  constant.ALTWERASE.html  constant.AT_EACCESS.html  (+880 more)
docs/lock_api/: struct.MappedMutexGuard.html  struct.MappedReentrantMutexGuard.html  struct.Mutex.html  struct.RawReentrantMutex.html  struct.ReentrantMutexGuard.html  struct.RwLock.html  struct.RwLockWriteGuard.html
docs/log/: index.html  struct.Record.html
docs/malloc_buf/: all.html  struct.MallocBuffer.html
docs/memchr/: struct.Memchr2.html
docs/mio/: struct.Registry.html  struct.Waker.html
docs/native_tls/: struct.Identity.html  struct.MidHandshakeTlsStream.html  struct.TlsAcceptor.html  struct.TlsConnectorBuilder.html
docs/nu_ansi_term/: all.html  index.html  struct.Rgb.html  (+3 more)
grading/: grading_scripts.json  practice_2.rhai  sample.rhai  summer_22.json
java_import_parser/: Cargo.toml
src/: constants.rs  grade.rs  health.rs  java.rs  lib.rs  main.rs  parsers.rs  util.rs  vscode.rs
umm/: Cargo.toml  get_static_executable.py  push.py  todo.MD
umm.xcodeproj/: project.pbxproj
umm/src/: main.rs
umm_derive/: Cargo.toml
umm_derive/src/: lib.rs
umm_test/: Main.java  MainTest.java  build.sh
(+20592 files in other folders)
