cargo-features = ["profile-rustflags"]

[workspace]
members = ["umm_derive"]

[package]
name = "umm"
version = "0.2.0"
edition = "2021"
default-run = "umm"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
umm_derive = { path = "./umm_derive" }
anyhow = "1.0.75"
lazy_static = "1.4.0"
which = "5.0.0"
bpaf = { version = "0.9.6", features = ["bright-color"] }
glob = "0.3.1"
peg = "0.8.2"
tree-sitter = "0.20.10"
# tree-sitter-java = { git = "https://github.com/tree-sitter/tree-sitter-java.git", rev = "39a11c8330d0b2ad75310456c378396785f79a4e" }
tree-sitter-java = "0.20.2"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
tabled = "0.10.0"
rhai = { version = "1.16.3", features = ["metadata", "decimal", "sync"] }
self_update = { version = "0.39.0", features = ["rustls"] }
typed-builder = "0.18.0"
postgrest = "1.6.0"
reqwest = { version = "0.11.22", features = ["json", "rustls-tls"] }
tokio = { version = "1.33.0", features = ["full"] }
futures = "0.3.29"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
walkdir = "2.4.0"
dotenvy = "0.15.7"
async-openai = "0.15.0"
uuid = { version = "1.5.0", features = ["std", "v4"] }
snailquote = "0.3.1"
similar = { version = "2.3.0", features = [
  "text",
  "inline",
  "unicode",
  "unicode-segmentation",
] }
colored = "2.0.4"
itertools = "0.11.0"
thiserror = "1.0.50"
comrak = { version = "0.19.0", features = [
  "shell-words",
  "syntect",
  "xdg",
  "arbitrary",
  "emojis",
  "shortcodes",
] }
axum = "0.6.20"
state = "0.6.0"

[target.x86_64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10.59", features = ["vendored"] }
reqwest = { version = "0.11.22", features = ["json"] }


[profile.release-lto]
inherits = "release"
lto = "fat"
codegen-units = 1
