[package]
name = "umm"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
glob = "0.3.0"
ureq = "2.2.0"
colored = "2.0.0"
java_import_parser = { path = "../java_import_parser" }
anyhow = "1.0.44"